--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -93,7 +93,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: f"[color=#1565c0]+[size=22][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all hackers, for each coder that determined a hacker innocent."
+                text: f"[color=#FFFFFF]+[/color][color=#c62828][size=22][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all hackers, for each coder that determined a hacker innocent."
                 markup: True
 
             MDLabel:
@@ -101,7 +101,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: f"[color=#c62828]-[size=22][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the hacker, for each hacker they have determined guilty."
+                text: f"[color=#FFFFFF]-[/color][color=#c62828][size=22][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the hacker, for each hacker they have determined guilty."
                 markup: True
 
             MDLabel:
@@ -117,7 +117,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: f"[color=#1565c0]+[size=22][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all coders, if majority of coders have determined a hacker as guilty."
+                text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all coders, if majority of coders have determined a hacker as guilty."
                 markup: True
 
             MDLabel:
@@ -125,7 +125,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: f"[color=#1565c0]+[size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for each coder that determined a hacker as guilty."
+                text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for each coder that determined a hacker as guilty."
                 markup: True
 
             MDLabel:
@@ -133,7 +133,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: f"[color=#c62828]-[size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder that determined a coder as guilty and was part of the majority."
+                text: f"[color=#FFFFFF]-[/color][color=#1565c0][size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for each coder that determined a coder guilty and was part of the majority."
                 markup: True
 
             MDBoxLayout:
