--- a/gui/informationscreens/RoundsScreen.kv
+++ b/gui/informationscreens/RoundsScreen.kv
@@ -5,27 +5,130 @@
         orientation: "vertical"
 
         MDToolbar:
-            title: "Main Information"
+            title: f"[font=Icons]{md_icons['folder-search']}[/font] Rounds"
             left_action_items: [["menu", lambda x: app.root.get_screen("maininfo").ids.nav_drawer.set_state("open")]]
             right_action_items: [["close", lambda x: app.root.get_screen("maininfo").close()]]
 
-        MDBoxLayout:
-            orientation: "vertical"
-            spacing: 10
-            padding: 21
+        ScrollView:
+            bar_width: 10
+            bar_color: C('FFFFFF')
 
-            MDLabel:
-                adaptive_height: True
-                text_color: C('FFFFFF')
-                theme_text_color: "Custom"
-                font_style: 'H6'
-                text: "Rounds"
-                markup: True
+            MDBoxLayout:
+                orientation: "vertical"
+                size_hint: None, None
+                height: self.minimum_height
+                size: (root.width, root.height)
+                spacing: 10
+                padding: 21
 
-            MDLabel:
-                adaptive_height: True
-                text_color: app.theme_cls.primary_color
-                theme_text_color: "Custom"
-                font_style: 'Body2'
-                text: "At the start of each round the timer will begin to count down."
-                markup: True
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    text: "Introduction"
+                    markup: True
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: app.theme_cls.primary_color
+                    theme_text_color: "Custom"
+                    font_style: 'Body2'
+                    text: "There are three rounds for each game. Depending on the round, depends on what kind and how many logs are provided. At any time you may review each round by using the tabs in the middle of the screen. You may not move to the next round if the timer is currently active."
+                    markup: True
+
+                MDSeparator:
+                    color: C("FFFFFF")
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    text: "Legend"
+                    markup: True
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"[size=22][font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF]: Unrevealed Evidence[/color]"
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDLabel:
+                    text_color: C('FFFFFF')
+                    font_style: "Body2"
+                    text: f"[color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Exclusive Evidence"
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDGridLayout:
+                    adaptive_height: True
+                    cols: 1
+                    canvas.before:
+                        Color:
+                            rgba: 51/255, 255/255, 51/255, 0.3
+                        Line:
+                            width: 0.3
+                            rectangle: self.x, self.y, self.width, self.height
+                        Color:
+                            rgba: 51/255, 255/255, 51/255, 0.06
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+
+    # Round 1
+
+                    MDLabel:
+                        text_color: app.theme_cls.primary_color
+                        font_style: "Body2"
+                        text: f" [color=#FFFFFF][font=Icons][size=22]{md_icons['folder-search']}[/font][/size] Round 1:[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+                        theme_text_color: "Custom"
+                        adaptive_height: True
+                        markup: True
+
+    # Round 2
+
+                    MDLabel:
+                        text_color: app.theme_cls.primary_color
+                        font_style: "Body2"
+                        md_bg_color: app.theme_cls.primary_dark
+                        text: f" [color=#FFFFFF][font=Icons][size=22]{md_icons['folder-search']}[/font][/size] Round 2:[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF],[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+                        theme_text_color: "Custom"
+                        adaptive_height: True
+                        markup: True
+
+    # Round 3
+
+                    MDLabel:
+                        text_color: app.theme_cls.primary_color
+                        font_style: "Body2"
+                        text: f" [color=#FFFFFF][size=22][font=Icons]{md_icons['folder-search']}[/font][/size] Round 3:[/color][color=#1565c0] [size=22][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color][color=#FFFFFF],[/color] [color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color]"
+                        theme_text_color: "Custom"
+                        adaptive_height: True
+                        markup: True
+
+                MDSeparator:
+                    color: C("FFFFFF")
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    text: "Next Round"
+                    markup: True
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"In order to begin the next round, the [color=#FFFFFF][size=22][font=Icons]{md_icons['play']}[/font][/size][/color] button at the bottom must be pressed. There is also a round tracker at the top of the screen represented by three [color=#FFFFFF][size=22][font=Icons]{md_icons['circle-outline']}[/font][/size][/color]'s. The game ends after the three rounds have been completed."
+
+
+#                    When the main screen is reached, players will be able to see three round tabs in the middle. At any time, you may review these tabs and have an idea of what is coming up and how many logs are provided. At the top of the screen you will notice three circles that represent what round you are currently in. You may begin the next round by pressing  at the bottom
+
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
