--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -1,9 +1,11 @@
 #:include gui\informationscreens\LoreScreen.kv
 #:include gui\informationscreens\AlignmentsScreen.kv
 #:include gui\informationscreens\PlayersScreen.kv
-#:include gui\informationscreens\RoundsScreen.kv
+#:include gui\informationscreens\TimerScreen.kv
 #:include gui\informationscreens\ActionsScreen.kv
 #:include gui\informationscreens\LogsScreen.kv
+#:include gui\informationscreens\RoundsScreen.kv
+#:include gui\informationscreens\PointsScreen.kv
 
 <MainInfo>:
     name: "maininfo"
@@ -23,7 +25,9 @@
             PlayersScreen:
             RoundsScreen:
             ActionsScreen:
+            TimerScreen:
             LogsScreen:
+            PointsScreen
 
         MDNavigationDrawer:
             size_hint: 0.6, 1
@@ -73,7 +77,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['timer']}[/font][/size] Rounds"
+                        text: f"[size=22][font=Icons]{md_icons['folder-search']}[/font][/size] Rounds"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -93,6 +97,16 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
+                        text: f"[size=22][font=Icons]{md_icons['timer']}[/font][/size] Timer"
+                        theme_text_color: "Custom"
+                        markup: True
+
+                        on_release:
+                            nav_drawer.set_state("close")
+                            maininfoscreenmanager.current = "Timer"
+
+                    OneLineListItem:
+                        text_color: C('FFFFFF')
                         text: f"[size=22][font=Icons]{md_icons['folder']}[/font][/size] Logs"
                         theme_text_color: "Custom"
                         markup: True
@@ -100,3 +114,13 @@
                         on_release:
                             nav_drawer.set_state("close")
                             maininfoscreenmanager.current = "Log"
+
+                    OneLineListItem:
+                        text_color: C('FFFFFF')
+                        text: f"[size=22][font=Icons]{md_icons['numeric-9-plus-box']}[/font][/size] Points"
+                        theme_text_color: "Custom"
+                        markup: True
+
+                        on_release:
+                            nav_drawer.set_state("close")
+                            maininfoscreenmanager.current = "Points"
