Plenty of fixes to replay game, both in new game and rematch. Have to continue working on it and fix the main screen.

--- a/codenet.kv
+++ b/codenet.kv
@@ -3,6 +3,7 @@
 #:include gui\revealdirections.kv
 #:include dialogs\IdentityDialog.kv
 #:include dialogs\confirmdialog.kv
+#:include dialogs\rematchdialog.kv
 #:include dialogs\logdialog.kv
 #:include gui\maininformation.kv
 #:include gui\load.kv
