--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -142,4 +142,4 @@
             MDToolbar:
                 icon: "refresh"
                 type: "bottom"
-#                on_action_button: app.on_pause()
+                on_action_button: root.opendialog()
