--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -42,6 +42,18 @@
             padding: 21
             adaptive_height: True
 
+#            canvas.before:
+#                Color:
+#                    rgba: 51/255, 255/255, 51/255, 0.3
+#                Line:
+#                    width: 0.3
+#                    rectangle: self.x, self.y, self.width, self.height
+#                Color:
+#                    rgba: 51/255, 255/255, 51/255, 0.06
+#                Rectangle:
+#                    pos: self.pos
+#                    size: self.size
+
             MDGridLayout:
                 canvas.before:
                     Color:
