--- a/gui/informationscreens/LoreScreen.kv
+++ b/gui/informationscreens/LoreScreen.kv
@@ -27,15 +27,13 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Introduction"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "It is 2090 and all systems have been digitalized. Unfortunately, this has led to breaches in security. With more than ninety percent of the workforce being programmers, crimes against public software have significantly increased, which have caused disruption for all societies. You are part of Code.Net, a private government organization which intended to sustain order over every network worldwide. You and your group is tasked with Project Sanctuary."
-                    markup: True
+                    text: "It is 2090 and all systems have been digitalized. Unfortunately, this has led to breaches in security. With more than ninety percent of the workforce being programmers, crimes against public software have significantly increased, which have caused disruption for all societies. You are part of C0de.Net, a private government organization which is intended to sustain order over every network worldwide. C0de.Net is currently tasked with Project Sanctuary."
 
                 MDLabel:
                     adaptive_height: True
@@ -43,12 +41,10 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Project Sanctuary"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "The purpose of Project Sanctuary is to get in the mind of hackers and coders so the organization is able to differentiate the two with the proper tools available to them. In doing so, we can continue to retain order across all networks. You will be given an alignment and to your best ability, you will attempt to accomplish your objective. Your performance will be scored and it is encouraged that your group will make multiple attempts in this process so we can choose the best candidate for the next task."
-                    markup: True
+                    text: "The purpose of Project Sanctuary is to get in the mind of hackers and coders so the organization is able to differentiate the two with the proper tools available to them. In doing so, Code.Net can continue to retain order across all networks. You will be given an alignment and to your best ability, you will attempt to accomplish your objective. Your performance will be scored and it is encouraged that your group will make multiple attempts in this process so we can choose the best candidate for the next task."
