--- a/gui/informationscreens/PlayersScreen.kv
+++ b/gui/informationscreens/PlayersScreen.kv
@@ -27,15 +27,13 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Introduction"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "Outside of the current players playing, there may be an AI within your game. On the left side of the main screen there will be icons which will show you how many players are playing and if an AI is present."
-                    markup: True
+                    text: "Outside of the current players, there may be an AI within your game. An AI is placed within a game when there is a low amount of players present. This is intended to retain the hacker's anonymity. On the top left side of the main screen there will be icons which will show you how many players are playing and if there is an AI present."
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -46,7 +44,6 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Legend"
-                    markup: True
 
                 MDLabel:
                     text_color: C("FFFFFF")
@@ -157,12 +154,10 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "AI"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "An AI is present when there is a low amount of human players. This is intended to retain the hacker's anonymity. The AI is capable of becoming a hacker or a coder. Unfortunately the AI cannot communicate in any way. This can be both detrimental and beneficial for all players from different alignments."
-                    markup: True
+                    text: "The AI may be a hacker or a coder. They cannot perform actions nor can they have an exclusive log. Unfortunately the AI cannot communicate in any way. This can be both detrimental and beneficial for all players from different alignments. The AI is always exclusively identified as the color white."
