--- a/gui/informationscreens/PointsScreen.kv
+++ b/gui/informationscreens/PointsScreen.kv
@@ -27,7 +27,6 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Introduction"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
@@ -72,7 +71,6 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Coder Scoring"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
@@ -87,7 +85,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#1565c0]+[size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for each coder that determined a hacker as guilty."
+                    text: f"[color=#1565c0]+[size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for each hacker they have determined guilty."
                     markup: True
 
                 MDLabel:
@@ -95,5 +93,5 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#1565c0]-[size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for each coder that determined a coder guilty and was part of the majority."
+                    text: f"[color=#1565c0]-[size=22][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for each coder that they have determined guilty and were part of the majority."
                     markup: True
