--- a/gui/informationscreens/TimerScreen.kv
+++ b/gui/informationscreens/TimerScreen.kv
@@ -27,15 +27,13 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Introduction"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "At the start of every round, after actions have been made, the timer is activated. During this time, players should discuss with one another to either mislead or obtain information which they can use to make a determination of what alignment they are part of. When the timer has ended, players may then move onto the next round."
-                    markup: True
+                    text: "At the start of every round, after actions have been made, the timer is activated. During this time, players should discuss with one another to either mislead or obtain information from each other. When the timer has ended and logs have been revealed, players may move onto the next round."
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -45,13 +43,12 @@
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
                     font_style: 'H6'
-                    text: "End Timer Early"
-                    markup: True
+                    text: "End Early"
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"Players may choose to end the timer sooner than intended. This can be because no more information can be obtained from players or hackers want to prevent more information from being revealed. In order to end a timer early, the majority must agree to it. Once agreed, press the [color=#FFFFFF][size=22][font=Icons]{md_icons['stop']}[/font][/size][/color] button below the main screen and agree to the prompt."
+                    text: f"Players may choose to end the timer sooner than intended. This can be because no more information can be obtained from players or hackers want to prevent more information from being revealed. In order to end a timer early, the majority must agree to it. Once agreed, press the [color=#FFFFFF][size=22][font=Icons]{md_icons['stop']}[/font][/size][/color] below the main screen and agree to the prompt."
                     markup: True
