--- a/gui/informationscreens/AlignmentsScreen.kv
+++ b/gui/informationscreens/AlignmentsScreen.kv
@@ -27,15 +27,13 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Introduction"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "Players are split up into two different alignments, hackers and coders. On the right side of the main screen there will be icons which will show you how many hackers and coders are present within the game."
-                    markup: True
+                    text: "Players are split up into two different alignments, hackers and coders. You must identify and work with your own alignment to achieve maximum points. On the right side of the main screen there will be icons which will show you how many hackers and coders are present within the game."
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -46,7 +44,6 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Legend"
-                    markup: True
 
                 MDLabel:
                     text_color: C("FFFFFF")
@@ -157,7 +154,6 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Hacker"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
@@ -165,7 +161,6 @@
                     theme_text_color: "Custom"
                     font_style: 'Body2'
                     text: "Hackers always have an ally and are fully aware of who their ally is. Only when there are nine players, do hackers have a second ally. Their objective is to have as many coders as possible to trust them, while making coders distrust each other. Denial and deception is key to victory."
-                    markup: True
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -176,12 +171,10 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Coder"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "Coders must work together to figure out who the hackers are with the assistance of items and logs. Unfortunately, these tools will never provide definite information. Therefore coders must be aware of deception, use process of elimination, and make informed decisions."
-                    markup: True
+                    text: "Coders must work together to figure out who the hackers are with the assistance of actions and logs. Unfortunately, these tools will never provide definite information. Therefore coders must be aware of deception and use process of elimination to make informed decisions."
