--- a/gui/informationscreens/LogsScreen.kv
+++ b/gui/informationscreens/LogsScreen.kv
@@ -34,8 +34,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "In the beginning of each round, the entire group is provided one or more logs. Depending on the round, will depend on how many and what type of log is provided and who is able to upload it. Logs will never provide definite information. Players consistently found on logs do not necessarily prove guilt."
-                    markup: True
+                    text: "In the beginning of each round, one or more logs are provided to the entire group. Depending on the round, will depend on how many and what type of log is provided. Logs will never provide definite information. Players consistently found on logs do not necessarily prove guilt. However, a hacker will always be on every log."
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -89,14 +88,13 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Evidence"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"Each folder is a player that will be on the log. Once a log is uploaded by pressing the [color=#FFFFFF][size=22][font=Icons]{md_icons['cloud-upload']}[/font][/size][/color] button, the colors of the players that are on the log will be revealed. There is a probability where logs may be exactly the same. This is an intended and should be taken into consideration."
+                    text: f"Each [size=22][color=#FFFFFF][font=Icons]{md_icons['folder']}[/font][/color][/size] is evidence of a player that is on the log. Once a log is uploaded by pressing the [color=#FFFFFF][size=22][font=Icons]{md_icons['cloud-upload']}[/font][/size][/color], the evidence will become [color=#FFFFFF][size=22][font=Icons]{md_icons['folder-account']}[/font][/size][/color] and the color of the evidence will signify who it belongs to. There is a probability where logs may be exactly the same. This is an intended and should be taken into consideration."
                     markup: True
 
                 MDSeparator:
@@ -108,14 +106,13 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Corrupted Log"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "There is a seventy percent chance of a log failing when it is being revealed. When this occurs, all unrevealed evidence becomes corrupted and no further information is provided. Log corruption may only occur in the first and second round."
+                    text: f"There is a seventy percent chance of a log failing when it is being revealed. This percentage may have been tampered with by other players. When a log becomes corrupted, all unrevealed evidence becomes [size=22][color=#FFFFFF][font=Icons]{md_icons['folder-alert']}[/font][/color][/size] and no further information is provided. Only player logs cannot be corrupted. Corrupted logs may be recovered by actions."
                     markup: True
 
                 MDSeparator:
@@ -127,12 +124,11 @@
                     theme_text_color: "Custom"
                     font_style: 'H6'
                     text: "Player Log"
-                    markup: True
 
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"A player log can be opened by the pressing the [color=#FFFFFF][size=22][font=Icons]{md_icons['cloud']}[/font][/size][/color] button. Once opened, at the top it will reveal who the log belongs to. Only the owner of the log can upload and view its revealed contents. Player logs cannot be corrupted. The log owner will never be within their own log. One player cannot have two player logs nor can an AI get a player log."
+                    text: f"Player logs are found on the 3rd round and are identified by two [color=#FFFFFF][size=22][font=Icons]{md_icons['folder-key']}[/font][/size][/color]. A player log can be opened by the pressing the [color=#FFFFFF][size=22][font=Icons]{md_icons['cloud']}[/font][/size][/color]. Once opened, it will reveal who the log belongs to. Only the owner of the log can upload and view its revealed contents. The player who owns the log will never be within their own log. One player cannot have multiple player logs nor can an AI get a player log."
                     markup: True
