--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -140,6 +140,6 @@
 
         MDBottomAppBar:
             MDToolbar:
-                icon: "refresh"
+                icon: "autorenew"
                 type: "bottom"
                 on_action_button: root.opendialog()
