changed text to fix compatibility hopefully

--- a/codenet.kv
+++ b/codenet.kv
@@ -1,7 +1,7 @@
 #:include gui\welcome.kv
 #:include gui\playeramount.kv
 #:include gui\revealdirections.kv
-#:include dialogs\IdentityDialog.kv
+#:include dialogs\identitydialog.kv
 #:include dialogs\confirmdialog.kv
 #:include dialogs\rematchdialog.kv
 #:include dialogs\logdialog.kv
