--- a/codenet.kv
+++ b/codenet.kv
@@ -1,14 +1,14 @@
-#:include gui\welcome.kv
-#:include gui\playeramount.kv
-#:include gui\revealdirections.kv
-#:include dialogs\identitydialog.kv
-#:include dialogs\confirmdialog.kv
-#:include dialogs\rematchdialog.kv
-#:include dialogs\logdialog.kv
-#:include gui\maininformation.kv
-#:include gui\load.kv
-#:include gui\colorselect.kv
-#:include gui\endgame.kv
+#:include gui/welcome.kv
+#:include gui/playeramount.kv
+#:include gui/revealdirections.kv
+#:include dialogs/identitydialog.kv
+#:include dialogs/confirmdialog.kv
+#:include dialogs/rematchdialog.kv
+#:include dialogs/logdialog.kv
+#:include gui/maininformation.kv
+#:include gui/load.kv
+#:include gui/colorselect.kv
+#:include gui/endgame.kv
 #:import C kivy.utils.get_color_from_hex
 #:import SlideTransition kivy.uix.screenmanager.SlideTransition
 
