--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -1,11 +1,11 @@
-#:include gui\informationscreens\LoreScreen.kv
-#:include gui\informationscreens\AlignmentsScreen.kv
-#:include gui\informationscreens\PlayersScreen.kv
-#:include gui\informationscreens\TimerScreen.kv
-#:include gui\informationscreens\ActionsScreen.kv
-#:include gui\informationscreens\LogsScreen.kv
-#:include gui\informationscreens\RoundsScreen.kv
-#:include gui\informationscreens\PointsScreen.kv
+#:include gui/informationscreens/LoreScreen.kv
+#:include gui/informationscreens/AlignmentsScreen.kv
+#:include gui/informationscreens/PlayersScreen.kv
+#:include gui/informationscreens/TimerScreen.kv
+#:include gui/informationscreens/ActionsScreen.kv
+#:include gui/informationscreens/LogsScreen.kv
+#:include gui/informationscreens/RoundsScreen.kv
+#:include gui/informationscreens/PointsScreen.kv
 
 <MainInfo>:
     name: "maininfo"
